# Toshokan

./: .gitignore  Cargo.toml  Containerfile  analyze_record.py  batch_run.py  build.rs  clean.sh  extract_record.py  fastest_parallel.py  generateHashFunc.py  parallel.yml  parallel_full.yml  parallel_w_randassign.yml  parallel_wo_randassign.yml  plot_points.py  preprocess_includes.py
examples/: activitysched_sortindex.rs  activitysched_sortindex_p.rs  arraylist_match.rs  arraylist_match_java.rs  binarysearch_sort.rs  binarysearch_sort_p.rs  bubblesort_java.rs  closest_power_two_ilog.rs  closest_power_two_ilog_p.rs  closestpair_sortfull.rs  closestpair_sortfull_p.rs  evalPoly_1.rs  evalPoly_2.rs  evalPoly_combined.rs  evalpoly_1_java.rs  evalpoly_2_java.rs  evalpoly_combined_java.rs  gcd_n_numbers.rs  gcd_n_numbers_java.rs  gcd_n_numbers_p.rs  grammar.yaml  heap_sort.rs  heap_sort_java.rs  heap_test.rs  heap_test_complex.rs  heap_test_param.rs  lcm_n_numbers.rs  lcm_n_numbers_java.rs  lcm_n_numbers_p.rs  matexpo_matmult.rs  matexpo_matmult_p.rs  polyderiv_mult.rs  polyeval_mult_expo.rs  powerroot.rs  powerroot_java.rs  powerroot_p.rs  primality.rs  primality_generator.rs  primality_generator_p.rs  primality_java.rs  (+10 more)
javaTracer/: Makefile  pom.xml
src/: backend.rs  cegis.rs  frontend.rs  lib.rs  macros.rs  predgenerator.rs  predinfer.rs
src/backend/: build_tracer.rs  cflag_manager.rs  hole_extractor.rs  java.rs  library_tracer.rs  log_analyzer.rs  solution_analyzer.rs  trace_error.rs  traits.rs
src/cegis/: cegis_config.rs  cegis_loop.rs  cegis_record.rs  cegis_state.rs  java.rs  retry_strategies.rs
src/frontend/: cand_encoder.rs  ce_encoder.rs  encode_error.rs  encoder.rs  generation_encoder.rs  java.rs  parser.rs  rewrite_controller.rs  sketch.pest  sketch_runner.rs  template_helpers.rs  traits.rs
src/predinfer/: predgen.rs
(+263 files in other folders)
