[package]
name = "partlibspec"
version = "0.1.0"
authors = ["KangJing (Chaser) Huang <huang989@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libpartlibspec"
path = "src/lib.rs"

[[bin]]
name = "partlibspec-bin"
path = "src/main.rs"

[dependencies]
clang = ">=0.23.0"
pest = ">=2.1.2"
pest_derive = ">=2.1.0"
tempfile = ">=3.1.0"
handlebars = ">=3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0"
quick-error = "=1.2.3"
quick-xml = "0.18.1"
regex = "1"
log = ">=0.4"
rand = "0.7.3"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
simplelog = "^0.7.4"