[package]
name = "partlibspec"
version = "0.1.0"
authors = ["KangJing (Chaser) Huang <huang989@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "libpartlibspec"
path = "src/lib.rs"

[[bin]]
name = "partlibspec-bin"
path = "src/main.rs"

[[bin]]
name = "predgenerator"
path = "src/predgenerator.rs"

[features]
sk_parser = ["pest", "pest_derive"]
libclang = []
inline_java_tracer = []

# TODO: boost versions
[dependencies]
clap = {version = "3.1.18", features = ["derive"]}
pest = {version = ">=2.1.2", optional = true}
pest_derive = {version = ">=2.1.0", optional = true}
tempfile = ">=3.1.0"
handlebars = "=3.0.1"
itertools = "0.10"
serde = {version = "1.0", features = ["derive"]}
serde_json = "=1.0"
serde_yaml = "0.8"
quick-error = "=2.0.1"
quick-xml = "0.18.1"
regex = "1"
log = ">=0.4"
rand = "0.7.3"
derive_builder = "0.10.2"
paste = "1"
mio = {version = "0.7.0", features = ["os-poll", "os-util"]}

[build-dependencies]
cc = "1.0"

[dev-dependencies]
simplelog = "^0.7.4"
